--- a/src/assets/nav.module.scss
+++ b/src/assets/nav.module.scss
@@ -81,7 +81,7 @@
 			}
 		}
 	}
-	@media screen and (max-width: 1440px) {
+	@media screen and (max-width: 426px) {
 		.right-nav {
 			.hamburger-menu {
 				display: block;
